new proj/src/objects/GE_OG_ERP_Detail__c.object
<CustomObject>
    <description>Store all the ERP details of the Account</description>
    <fields>
        <fullName>GE_OG_Advance_User__c</fullName>
        <label>Advance User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Company_Code__c</fullName>
        <label>Company Code</label>
        <picklist>
            <picklistValues>
                <fullName>Argentina - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada - Quinn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GrenCo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oman - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realflex/Datac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Quinn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zenith</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Credit_Limit_Request__c</fullName>
        <label>Credit Limit Requested</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Cust_Req_nonUSD__c</fullName>
        <inlineHelpText>Is the Customer Requesting  non - USD currency?</inlineHelpText>
        <label>Is the Customer Requesting non-USD ?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Accept_terms_from_COE__c</fullName>
        <label>Accept terms from COE?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Account_Phone__c</fullName>
        <formula>GE_OG_ERP_Account__r.GE_PW_Phone_New_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ERP Details</relationshipLabel>
        <relationshipName>ERP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Advance_Input_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance Input Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Bill_To_SAP_TC__c</fullName>
        <label>Bill To - ERP Customer# T&amp;Cs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Bill_To_SAP__c</fullName>
        <label>Bill To - ERP Customer#</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_CSR_Email__c</fullName>
        <label>CSR Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_CSR_First_Name__c</fullName>
        <label>CSR First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_CSR_Last_Name__c</fullName>
        <label>CSR Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_CSR_Number__c</fullName>
        <label>CSR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_CSR_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSR Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ERP_Details_CSR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Currency__c</fullName>
        <inlineHelpText>If anything other than USD please get finance approval.</inlineHelpText>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD (please provide evidence of finance approval)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR (please provide evidence of finance approval)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP (please provide evidence of finance approval)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Customer_Class__c</fullName>
        <inlineHelpText>Note - if your customer is not an end-user they must be approved through ITP process.</inlineHelpText>
        <label>Customer Class</label>
        <picklist>
            <picklistValues>
                <fullName>&quot;AS-	Assembler&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;BA-	OC Agent&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;BO-	OC Office&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;BP-	OC Plant&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;BS-	OC Subsidiary&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;BY-	Buying Arm&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;C1-	Competitor Type 1&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;C2-	Competitor Type 2&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;C3-	Competitor Type 3&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;CS-	Consultant&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;DS-	OC Distributor&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;EC-	Engineer &amp; Construct&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;ED-	Education &amp; Univ.&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;EU-	End User&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;EX-	Exporter / Importer&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;G1-	All Oth USG&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;G2-	FG Foreign Gove&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;G3-	US State Gov&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;G4-	US Local Gov&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;G5-	US GE Governmen&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;G6-	Dept of Defense&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;G7-	NASA&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;G8-	Dept of Energy&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;G9-	Dept of HomeSec&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;GA-	GenServiceAdmin&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;GB-	Veterans Admin&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;GT-	GTC(GreenTag Center)&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;GV-	Government&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;IC-	Insurance Company&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;IN-	Inst./Control Mfg.&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Cycle_Time__c</fullName>
        <label>Cycle Time(in hours)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Delivering_Plant__c</fullName>
        <inlineHelpText>Pick the location from which shipments will most often be made.</inlineHelpText>
        <label>Delivering Plant</label>
        <picklist>
            <picklistValues>
                <fullName>Aberdeen - 6410</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calgary - 1710</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai - 5400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farnborough - 6400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette / Conroe - 1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twinsburg - 1600</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Finance_Input_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Input Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Inbound_Timestamp__c</fullName>
        <label>Inbound Timestamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Incoterms_1__c</fullName>
        <inlineHelpText>Pick the Incoterm which will most often be used.</inlineHelpText>
        <label>Incoterms 1</label>
        <picklist>
            <picklistValues>
                <fullName>CIP - Carriage and Insurance Paid To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT - Carriage Paid To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW - Ex Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA - Free Carrier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Incoterms_2__c</fullName>
        <inlineHelpText>Free text - type the location to which we will most often deliver.</inlineHelpText>
        <label>Incoterms 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Industry_Code__c</fullName>
        <inlineHelpText>Select from dropdown.</inlineHelpText>
        <label>Industry Code</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture-675</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum Mfg-876</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bearing Mfg-615</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler Mfg-623</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement Mfg-850</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor Centr Mfg-600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor Other Mfg-602</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor Recip Mfg-601</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupling Mfg-614</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crude Prod Offshore-101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crude Prod Onshore-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crude Prod Tar/Shale-102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elec Motor/Gen Mfg-609</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Recip Mfg-612</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engrg Contractors-925</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extruder Mfg-616</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Cooling Twr Mfg-611</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Mfg excl CoolTwr-610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Machinery Mfg-622</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Products Mfg-725</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Proc or Mfg NEC-404</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gearbox Mfg-613</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass &amp; Prod Mfg-825</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Gases Mfg-403</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instr &amp; Systems-950</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iron &amp; Steel Mfg-875</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LNG &amp; LPG Production-402</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumber &amp; Wood Prod-700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery Mfg NEC-624</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measuring and Dispensing Pumps-3586</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Internal_Billing_System__c</fullName>
        <inlineHelpText>If the customer is part of GE, please ask if we can use IBS (Internal Billing System).</inlineHelpText>
        <label>Will the Customer be on the IBS?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Is_the_Customer_part_of_GE_ES__c</fullName>
        <inlineHelpText>Only answer this if &quot;no&quot; above</inlineHelpText>
        <label>Is the Customer part of GE Energy Srvcs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (05 - WOB ES &amp; Motors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - please answer next question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Is_the_Customer_part_of_GE_E__c</fullName>
        <inlineHelpText>Only answer this if &quot;no&quot; above.</inlineHelpText>
        <label>Is the Customer part of GE Energy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (04 - WOB Energy, non-ES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No (03 - OOB Non-Energy Infra)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Is_the_Customer_part_of_GE_OG__c</fullName>
        <inlineHelpText>Only answer this if &quot;yes&quot; above</inlineHelpText>
        <label>Is the Customer part of GE Oil &amp; Gas?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (07 - WOS Oil &amp; Gas)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - please answer next question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - WOB Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - OOB Non-O &amp;G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Is_the_Customer_part_of_GE__c</fullName>
        <inlineHelpText>Select from dropdown.</inlineHelpText>
        <label>Is the Customer part of GE?</label>
        <picklist>
            <picklistValues>
                <fullName>No (01 - External Customer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - please answer next question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Domestic External Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No  - Export External Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Is_this_Customer_Tax_Exempt__c</fullName>
        <label>Is this Customer Tax Exempt?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Outbound_Timestamp__c</fullName>
        <label>Outbound Timestamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Price_Group__c</fullName>
        <inlineHelpText>Regional multiplier.</inlineHelpText>
        <label>Price Group</label>
        <picklist>
            <picklistValues>
                <fullName>List Price - X0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Plus 5% - X1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Plus 10% - X2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Plus 12% - X3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Plus 15% - X4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Plus 20% - X5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Plus 25% - X6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Plus 33% - X7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Quote_To_SAP_TC__c</fullName>
        <label>Quote/Sold To - ERP Customer# T&amp;Cs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Quote_To_SAP__c</fullName>
        <label>Quote/Sold To - ERP Customer#</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Region_Manager__c</fullName>
        <inlineHelpText>Select from dropdown.</inlineHelpText>
        <label>Region Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Amer Khayyat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evan Zhang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alan Boyter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Munro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nikolai Kutsenko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcelo Pedro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger Harb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Hitchcock-Smith</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Sales_Group__c</fullName>
        <inlineHelpText>Select from dropdown.</inlineHelpText>
        <label>Sales Group</label>
        <picklist>
            <picklistValues>
                <fullName>100-House Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-Mark Geneau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>103-Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>107-Gene Trimble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>116-Kenichi Yamamoto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>117-Yong He</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>121-Grzegorz Rokita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>122-Patrick Gaborieau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>124-Siegfried Adelsberge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125-Tomas Tibbling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>127-Graham Fenney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130-Don Silcock / GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>131-Mark Colliflower/GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>132-Alistair Finch / GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>133-Stephen Byrne / GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>134-Jun-Ho Jin / GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>135-Takumi Watanabe / GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>136-David Taylor / GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150-Rick Bauer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-Don Pascucci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>152-Rafael Sandrea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>153-Tim Burgess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>155-Tom Ondreyko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>157-Kees van Cappellen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>159-S. Adelsberger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160-Tim Clarke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170-Alex Tchirkov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>171-Andrei Tcherviakov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>172-Victor Fedorov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>173-MIKHAIL LICHENKO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Sales_Office__c</fullName>
        <inlineHelpText>This is actually the region in which the sale is being made.</inlineHelpText>
        <label>Sales Office</label>
        <picklist>
            <picklistValues>
                <fullName>Africa - OAFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia - OASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada - OCAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China - OCHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIS - OCIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conroe - OCON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe - OEEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - OIND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette Manufacturing - OLAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette Sales - OLAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America - OLAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East - OMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia - ORUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Europe - OWEU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Sales_Org_Currency_Remit_To__c</fullName>
        <inlineHelpText>Select from dropdown.</inlineHelpText>
        <label>Sales Org - Currency - Remit To</label>
        <picklist>
            <picklistValues>
                <fullName>1400 - Cheque Payment - 145</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400 - Wire Transfer (GECARS) - 146</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400 - Wire Transfer (non-GECARS) - 149</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1600 -  - 160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1710 - CAD - 175</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1710 - USD - 176</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5400 - USD (GECARS) - 546</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5400 - USD (non-GECARS) - 549</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6400 - USD - 404</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6400 - GBP - 405</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6400 - EUR - 406</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6410 - USD - 401</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6410 - GBP - 402</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Sales_Org__c</fullName>
        <inlineHelpText>Legal entity entering into a contract with the customer.</inlineHelpText>
        <label>Sales Org</label>
        <picklist>
            <picklistValues>
                <fullName>1-Sales Org. 001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1200-Bently Nevada LLC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400-GE Energy OFT Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500-GCS-Loveland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1600-GE Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1700-Bently Nevada-Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1710-GE OFT Canada Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1720-GE InspTechnolgiesAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1800-GEInspTechnologiesLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1810-DRESSER, INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000-Bently do Brasil Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3010-Bently Nevada-Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3020-Bently Nevada-Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3030-BN - Venezuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3040-BN - Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3050-BN - Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000-GE Bahrain Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5010-GEIIPL,Div-BN,Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5020-GEIIPL,Div-BN, Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5030-Bently Nevada-So. Af</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5040-General electric Sau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5050-GEIOC, Abu Dhabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5060-GEII Qatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5400-Sondex Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6000-GE Hungary ZRT vw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6010-Bently Nevada-UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6020-Bently Nevada Italia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6030-Bently Nevada-FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6040-Bently Nevada-DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6050-Bently Nevada-Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Sales_Person_Email__c</fullName>
        <label>Sales Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Sales_Person_First_Name__c</fullName>
        <label>Sales Person First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Sales_Person_ID__c</fullName>
        <label>Sales Person ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Sales_Person_Last_Name__c</fullName>
        <label>Sales Person Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ERP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>